# distillery

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: action.rs  app.rs  command.rs  config.rs  github.rs  llm.rs  main.rs  prompt.rs  types.rs
src/domain/: github.rs  llm.rs  mod.rs  prompt.rs  types.rs
src/ui/: layout.rs  mod.rs
src/ui/components/: document.rs  error.rs  header.rs  keybindings.rs  loading.rs  mod.rs  picker.rs  repo_selector.rs  sidebar.rs  util.rs
src/update/: actions.rs  editing.rs  error.rs  helpers.rs  loading.rs  mod.rs  picker.rs  repo.rs  viewing.rs
